samples/_failures_safe/1761652357_f17be9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e0840d29.c: In function ‘main’:
./samples/SAFE/__tmp_e0840d29.c:155:5: error: expected identifier or ‘(’ at end of input
  155 |     int rows1, cols1,
      |     ^~~
./samples/SAFE/__tmp_e0840d29.c:155:5: error: expected declaration or statement at end of input
